added homepage url

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://SoyoZw.github.io/personal_project",
   "name": "personal_project",
   "version": "0.1.0",
   "private": true,
