package json update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://SoyoZw.github.io/personal_project",
+  "homepage": "https://SoyoZw.github.io/personal_project",
   "name": "personal_project",
   "version": "0.1.0",
   "private": true,
